// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Export Java Selenium should export a suite to JUnit code 1`] = `
"
import org.junit.Test;
import org.junit.Before;
import org.junit.After;
import static org.junit.Assert.*;
import static org.hamcrest.CoreMatchers.is;
import org.openqa.selenium.By;
import org.openqa.selenium.WebDriver;
import org.openqa.selenium.firefox.FirefoxDriver;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.WebElement;
import org.openqa.selenium.interactions.Actions;
import java.util.HashMap;
import java.util.List;

public class Login {
    private WebDriver driver;
    private HashMap<String, Object> vars = new HashMap<>();

    @BeforeAll
    public void initialSetUp() {
    }

    @Before
    public void setUp() {
        driver = new FirefoxDriver();
    }

    @After
    public void tearDown() {
        driver.quit();
    }

    @AfterAll
    public void finalTearDown() {
    }

    @Test
    public void validcredentials() {
        driver.get(\\"http://the-internet.herokuapp.com/login\\");
        driver.manage().window().setSize(new Dimension(1440, 1177));
        driver.findElement(By.id(\\"username\\")).sendKeys(\\"tomsmith\\");
        driver.findElement(By.id(\\"password\\")).sendKeys(\\"SuperSecretPassword!\\");
        driver.findElement(By.cssSelector(\\"#login button\\")).click();
        assertThat(driver.findElement(By.cssSelector(\\".flash.success\\")).getText(), is(\\"You logged into a secure area!\\\\\\\\n×\\"));
    }

    @Test
    public void invalidcredentials() {
        driver.get(\\"http://the-internet.herokuapp.com/login\\");
        driver.manage().window().setSize(new Dimension(1440, 1177));
        driver.findElement(By.id(\\"username\\")).sendKeys(\\"blah\\");
        driver.findElement(By.id(\\"password\\")).sendKeys(\\"blah\\");
        driver.findElement(By.cssSelector(\\"#login button\\")).click();
        assertThat(driver.findElement(By.id(\\"flash\\")).getText(), is(\\"Your username is invalid!\\\\\\\\n×\\"));
    }
}
"
`;

exports[`Code Export Java Selenium should export a test to JUnit code 1`] = `
"
import org.junit.Test;
import org.junit.Before;
import org.junit.After;
import static org.junit.Assert.*;
import static org.hamcrest.CoreMatchers.is;
import org.openqa.selenium.By;
import org.openqa.selenium.WebDriver;
import org.openqa.selenium.firefox.FirefoxDriver;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.WebElement;
import org.openqa.selenium.interactions.Actions;
import java.util.HashMap;
import java.util.List;

public class Login {
    private WebDriver driver;
    private HashMap<String, Object> vars = new HashMap<>();

    @BeforeAll
    public void initialSetUp() {
    }

    @Before
    public void setUp() {
        driver = new FirefoxDriver();
    }

    @After
    public void tearDown() {
        driver.quit();
    }

    @AfterAll
    public void finalTearDown() {
    }

    @Test
    public void login() {
        driver.get(\\"http://the-internet.herokuapp.com/login\\");
        driver.manage().window().setSize(new Dimension(1440, 1177));
        driver.findElement(By.id(\\"username\\")).sendKeys(\\"tomsmith\\");
        driver.findElement(By.id(\\"password\\")).sendKeys(\\"SuperSecretPassword!\\");
        driver.findElement(By.cssSelector(\\"#login button\\")).click();
        assertThat(driver.findElement(By.cssSelector(\\".flash.success\\")).getText(), is(\\"You logged into a secure area!\\\\\\\\n×\\"));
    }
}
"
`;
